refactor EcoCachedSchemaRegistryClient, re-arrange method overloads